examples/pass/multiplication_float_args.uplp
-- test: value { "type": "Num", "value": 0.34377359052 }
0.4516 * 0.7612347