examples/fail/invalid_token.uplp
-- test: fail { "category": "Parse.invalid_token", "metadata": { "loc": 0 } }
~